...
    <string name="common_messages">Mensajes</string>
    <string name="common_duration">Duración</string>
    <string name="common_total">Total</string>
    <string name="common_received">Recibidos</string>
    <string name="common_save">Guardar</string>
    <string name="common_cancel">Cancelar</string>
    <string name="common_ok">OK</string>
    <string name="common_sys">Sistema</string>

    <!-- LANGUAGE -->
    <string name="language_spanish">Español</string>
    <string name="language_english">English</string>
    <string name="language_galician">Galego</string>
...
