...
                android:textColor="@android:color/white"
                android:textColorHint="#94A3B8"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="40dp"
            android:text="@string/login_action"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:backgroundTint="#16C3E6"
            app:cornerRadius="16dp"/>

        <TextView
            android:id="@+id/tvGoRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:text="@string/login_go_register"
            android:textColor="#00D3FF"
...
